# Flux-Meets

./: AI_SERVICES_REFACTOR.md  ASSEMBLY_AI_IMPLEMENTATION.md  ASSEMBLY_AI_SETUP.md  DYNAMIC_LANGUAGE_POOL.md  GEMINI_IMPLEMENTATION.md  GEMINI_TRANSLATION_SETUP.md  README.md  TECH_SPEC.md  TRANSLATION_FILTERING.md  TRANSLATION_PROVIDERS.md  package-lock.json  package.json  remix.config.js  schema.ts  server.ts  vitest.workers.config.ts  wrangler.development.toml  wrangler.e2ee.toml  wrangler.production.toml  wrangler.public.toml  wrangler.staging.toml  wrangler.toml
.github/workflows/: deploy.yml
app/: entry.server.tsx  polyfills.server.ts  root.test.ts  root.tsx  session.ts
app/components/: AiPushToTalkButton.tsx  AudioInputSelector.tsx  AudioStream.tsx  Button.tsx  CameraButton.tsx  CaptionDisplay.tsx  ChatPanel.tsx  CopyButton.tsx  Dialog.tsx  Disclaimer.tsx  DropdownMenu.tsx  EnsurePermissions.tsx  Input.tsx  InviteAiDialog.tsx  LeaveRoomButton.tsx  MeetingTimer.tsx  MicButton.tsx  OverflowMenu.tsx  Participant.tsx  ParticipantLayout.tsx  ParticipantsMenu.tsx  ReportBugDialog.tsx  SettingsDialog.tsx  TextArea.tsx  Toast.tsx  Tooltip.tsx  VideoInputSelector.tsx  VideoSrcObject.tsx
app/durableObjects/: ChatRoom.server.ts
app/hooks/: useAudioLevel.ts  useBroadcastStatus.ts  useIsSpeaking.tsx  useMediaDevices.ts  useMicrophoneGain.ts  useMoQ.ts  usePeerConnection.tsx  useRoom.ts  useRoomContext.ts  (+6 more)
migrations/: 0002_add_transcripts.sql  0003_add_roomname_to_meetings.sql
rust-mls-worker/: Cargo.toml  build.sh
rust-mls-worker/src/: lib.rs  mls_ops.rs
(+49 files in other folders)
