[package]
name = "flux-mls-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
log = "0.4.22"
openmls = { version = "0.8.1", features = ["js"] }
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.0"
sha2 = "0.10.8"
thiserror = "2.0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.76"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.76"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
    'RtcTransformEvent',
    'ReadableStream',
    'WritableStream',
    'ReadableStreamGetReaderOptions',
    'ReadableStreamReaderMode',
    'ReadableStreamByobReader',
    'ReadableStreamDefaultReader',
    'WritableStreamDefaultWriter',
    'RtcEncodedAudioFrame',
    'RtcEncodedVideoFrame',
]

[dev-dependencies]
rand = "0.8"
